# nexa-campus

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  API_DOCUMENTATION.md  BACKEND_SETUP.md  DEPLOY-v25.md  DEPLOY.md  DEPLOYMENT.md  FIX_BUILD_README.md  IMPLEMENTATION_SUMMARY.md  PATCH_NOTES.md  README.md  README_FIRST.md  gajian.java  knip.json  main.java  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  prd.md  schema.sql  tailwind.config.ts  tsconfig.json  vercel.json  ÔÜá´©Å FIX-BUILD-ERROR-FIRST.md
docs/: AI_PROVIDER_GUIDE.md  MIGRATION_arena_leaderboard_badges.sql  MIGRATION_arena_trust_verification.sql  MIGRATION_badge_consistency_fix.sql  MIGRATION_ml_risk_bandit_nudge.sql  MIGRATION_push_subscriptions.sql  MIGRATION_reminder_offset.sql  MIGRATION_security_hardening.sql  MIGRATION_smart_input_logs.sql  MIGRATION_study_packs.sql  MIGRATION_study_v2.sql  MIGRATION_study_v2_recurring.sql  MIGRATION_user_presence.sql  NOTES_bug_003_004_005.md  TESTING_CHECKLIST_smart_input.md  assets.md  beta-testing-checklist.md  telegram-reminder-cron.md  telegram-reminder.md
migrations/: 202606040003_profile_photo_upload.sql  202606050001_fix_profile_schema_cache.sql
nexa_crew/: README.md  pyproject.toml
nexa_crew/src/nexa_crew/: crew.py  main.py
prisma/: schema.prisma
public/: README.md  manifest.json  offline.html  push-sw.js  sw.js
scripts/: fix-push-notification-settings.mjs  fix-study-room-slug.sh  install-v1.6.34.mjs  install-v1.6.36.mjs  install-v1.6.38.mjs  install-v1.6.39.mjs  install-v1.6.40.mjs  (+1 more)
(+497 files in other folders)
